# websem-idc-project

./: .gitignore  Makefile  README.md  docker-compose.yml  pipeline_automation.py  rapport.md
corese_server/: Dockerfile  entrypoint.sh
data/: Table Ciqual 2020_FR_2020 07 07.xls  fruits_weights.csv  recipes.csv  vegetables_weights.csv
data_finder/: pyproject.toml
data_finder/cache/: foods_cache.json  is_food_cache.json  recipe_cache.json  wikipedia_to_dbpedia_uris.json
data_finder/data_finder/: __main__.py  conf.py
data_finder/data_finder/queries/: food_thesaurus.py
data_finder/data_finder/utils/: corese.py  get_annotations.py  get_data.py  get_keyword.py  get_units.py  is_food.py  pke.ipynb  populate.py  populate_ingredients.py  populate_recipes.py  test.py  use_cache.py
dbpedia-spotlight/: Dockerfile
kitchen_chef_app/: .eslintrc.cjs  Dockerfile  index.html  package-lock.json  package.json
kitchen_chef_server/: Dockerfile  Makefile  pyproject.toml  wait-for-service.sh
kitchen_chef_server/kitchen_chef_server/: __main__.py  app.py  conf.py
kitchen_chef_server/kitchen_chef_server/controllers/: IngredientController.py  RecipeController.py
kitchen_chef_server/kitchen_chef_server/factories/: IngredientFactory.py
kitchen_chef_server/kitchen_chef_server/models/: Food.py  Ingredient.py  NutritionalData.py  Recipe.py  RecipeFilter.py
kitchen_chef_server/kitchen_chef_server/sparql/constructs/: conversion_ratios.rq
kitchen_chef_server/kitchen_chef_server/sparql/entailment/: complementary_recipe.rq
kitchen_chef_server/kitchen_chef_server/sparql/inserts/: conversion.rq
kitchen_chef_server/kitchen_chef_server/sparql/queries/: build_search_query.py  prepared_verification.rq
kitchen_chef_server/kitchen_chef_server/utils/: corese_query.py  load_graph.py  read_query.py  sparql_service_update.py
kitchen_chef_server/patches/: rdflib_parser.py  rdflib_sqarql.py
metadata/: categories.rq  conversionEntailement.rq  food_thesaurus.rq  food_weights.json  food_weights.rq  (+8 more)
(+74 files in other folders)
